--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
-beautifulsoup4==4.12.3
-contourpy==1.3.1
-cycler==0.12.1
-fonttools==4.54.1
-jsonpointer==2.1
-kiwisolver==1.4.7
-matplotlib==3.9.2
-numpy==2.1.3
-pandas==2.2.3
-pillow==11.0.0
-pyparsing==3.2.0
-pytz==2024.2
-setuptools==75.1.0
-soupsieve==2.6
-speedtest-cli==2.1.3
-tzdata==2024.2
-wheel==0.44.0
+beautifulsoup4==4.13.4
+blinker==1.8.2
+bs4==0.0.2
+certifi==2025.7.14
+charset-normalizer==3.4.2
+click==8.1.8
+Flask==3.0.3
+idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==2.1.5
+numpy==1.24.4
+pandas==2.0.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
+requests==2.32.4
+six==1.17.0
+soupsieve==2.7
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.2.3
+Werkzeug==3.0.6
+zipp==3.20.2
