--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.1.8
 Flask==3.0.3
+flask_cors==6.0.1
 idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
