--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ MarkupSafe==2.1.5
 numpy==1.24.4
 pandas==2.0.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 requests==2.32.4
 six==1.17.0
