--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,47 @@
+annotated-types==0.7.0
+anyio==4.11.0
 beautifulsoup4==4.13.4
 blinker==1.8.2
 boto3==1.40.67
+botocore==1.40.67
 bs4==0.0.2
+cachetools==6.2.1
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.1.8
 Flask==3.0.3
-flask_cors==6.0.1
+flask-cors==6.0.1
+google-auth==2.41.1
 google-genai==1.46.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
 MarkupSafe==2.1.5
 numpy==1.24.4
 pandas==2.0.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.10
+pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
 requests==2.32.4
+rsa==4.9.1
+s3transfer==0.14.0
 six==1.17.0
+sniffio==1.3.1
 soupsieve==2.7
+tenacity==9.1.2
+typing-inspection==0.4.2
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.2.3
+websockets==15.0.1
 Werkzeug==3.0.6
 zipp==3.20.2
